--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,8 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5434/mgdi-dbm
 spring.datasource.username=postgres
 spring.datasource.password=admin
+
+#debug=true
+##TRACE, DEBUG, INFO, WARN, ERROR, FATAL, OFF
+#Logging.Level.root=INFO
+#Logging.file.path=/tmp/
