--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
-server.port=9090
+server.port=${SERVER_PORT}
 
-spring.jpa.database=postgresql
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database=${DATABASE}
+spring.jpa.hibernate.ddl-auto=${HIBERNATE_DDL_AUTO}
 
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5434/mgdi-dbm
-spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.driver-class-name=${DATASOURCE_DRIVER_CLASS_NAME}
+spring.datasource.url=jdbc:${DATABASE}://${DATASOURCE_URL}:${DATASOURCE_PORT}/${DATASOURCE_DB}
+spring.datasource.username=${DATASOURCE_USERNAME}
+spring.datasource.password=${DATASOURCE_PASSWORD}
 
 #debug=true
 ##TRACE, DEBUG, INFO, WARN, ERROR, FATAL, OFF
