--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,19 @@
 server.port=9090
-
 spring.jpa.database=postgresql
 spring.jpa.hibernate.ddl-auto=update
-
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5434/mgdi-dbm
 spring.datasource.username=postgres
 spring.datasource.password=admin
+
+#server.port=9090
+#spring.jpa.database=postgresql
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://psqldccplataformadatascienceqa.postgres.database.azure.com/analytics2
+#spring.datasource.username=analytics2@psqldccplataformadatascienceqa.postgres.database.azure.com
+#spring.datasource.password=QaQmPeGLxHpCa
+debug=true
 
 #debug=true
 ##TRACE, DEBUG, INFO, WARN, ERROR, FATAL, OFF
