UsuarioRest devuelve info de users

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.url=jdbc:${DATABASE}://${DATASOURCE_URL}:${DATASOURCE_PORT}/${
 spring.datasource.username=${DATASOURCE_USERNAME}
 spring.datasource.password=${DATASOURCE_PASSWORD}
 
-#debug=true
+debug=true
 ##TRACE, DEBUG, INFO, WARN, ERROR, FATAL, OFF
 #Logging.Level.root=INFO
 #Logging.file.path=/tmp/
