salvando bidireccional, revisar Equipo

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,6 @@ debug=true
 ##TRACE, DEBUG, INFO, WARN, ERROR, FATAL, OFF
 #Logging.Level.root=INFO
 #Logging.file.path=/tmp/
+management.endpoints.web.exposure.include=*
+
 
