Se corrige las tablas y se agregan usuarios

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,14 @@
 server.port=${SERVER_PORT}
 
 spring.jpa.database=${DATABASE}
-spring.jpa.hibernate.ddl-auto=${HIBERNATE_DDL_AUTO}
+#spring.jpa.hibernate.ddl-auto=${HIBERNATE_DDL_AUTO}
 
 spring.datasource.driver-class-name=${DATASOURCE_DRIVER_CLASS_NAME}
 spring.datasource.url=jdbc:${DATABASE}://${DATASOURCE_URL}:${DATASOURCE_PORT}/${DATASOURCE_DB}
 spring.datasource.username=${DATASOURCE_USERNAME}
 spring.datasource.password=${DATASOURCE_PASSWORD}
+
+spring.jpa.hibernate.ddl-auto=create
 
 #debug=true
 ##TRACE, DEBUG, INFO, WARN, ERROR, FATAL, OFF
