Se corrige las tablas y se cargan algunas tablas con informacion

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,11 +9,16 @@ spring.datasource.username=${DATASOURCE_USERNAME}
 spring.datasource.password=${DATASOURCE_PASSWORD}
 
 spring.jpa.hibernate.ddl-auto=create
+spring.jpa.database-platform = org.hibernate.dialect.PostgresPlusDialect
+#${DATABASE_DIALECT}
+
 
 #debug=true
 ##TRACE, DEBUG, INFO, WARN, ERROR, FATAL, OFF
 #Logging.Level.root=INFO
 #Logging.file.path=/tmp/
 management.endpoints.web.exposure.include=*
+
+#DATABASE=postgresql;DATASOURCE_DB=analytics2;DATASOURCE_DRIVER_CLASS_NAME=org.postgresql.Driver;DATASOURCE_PASSWORD=123456;DATASOURCE_PORT=5432;DATASOURCE_URL=psqldccplataformadatascienceqa.postgres.database.azure.com;DATASOURCE_USERNAME=postgres;DATASOURCE_OPTION=;HIBERNATE_DDL_AUTO=update;SERVER_PORT=8080;DATABASE_DIALECT=oorg.hibernate.dialect.PostgresPlusDialect
 
 
